# Encrypted-SPJ

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: crypto_helper.rs  db_structs.rs  emm.rs  eval_references.rs  leakage_query_planner.rs  lib.rs  mm.rs  ste.rs  sti.rs  token.rs
encrypted-spj-client/: Cargo.toml
encrypted-spj-client/src/: main.rs  parse.rs
encrypted-spj-server/: Cargo.toml
encrypted-spj-server/src/: handler.rs  main.rs
txts/: annotate_sakila.txt  test.txt
