[package]
name = "common"
version = "0.1.0"
authors = ["AdamRivkin <amrivkin@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_chacha = "0.3.0"
rand_core = "0.6.2"
rust-crypto = "0.2.36"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
histogram = "0.6.9"

