[package]
name = "encrypted-spj-client"
version = "0.1.0"
authors = ["AdamRivkin <amrivkin@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
rustyline = "7.1.0"
rand = "0.7.3"
rand_chacha = "0.3.0"
rand_core = "0.6.2"
rust-crypto = "0.2.36"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.6"
