[package]
name = "encrypted-spj-server"
version = "0.1.0"
authors = ["AdamRivkin <amrivkin@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bincode = "1.0"
serde_json = "1.0"